name:                CG
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           (c) 2015 Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable CG
  main-is:             CG.hs
  other-extensions:    RecordWildCards, TupleSections, OverloadedStrings,
                       ViewPatterns, FlexibleContexts, PartialTypeSignatures,
                       DeriveGeneric, TypeSynonymInstances, FlexibleInstances,
                       GADTs, MultiParamTypeClasses, UndecidableInstances,
                       RankNTypes
  build-depends:       base >=4.8 && <4.9, parallel >=3.2 && <3.3,
                       containers >=0.5 && <0.6, directory >=1.2 && <1.3,
                       filepath >=1.4 && <1.5, parsec >=3.1 && <3.2,
                       deepseq >=1.4 && <1.5, hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3, mtl >=2.2 && <2.3,
                       void >=0.7 && <0.8, cereal >= 0.4 && < 0.5
  default-language:    Haskell2010
