name:                buildfile
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           (c) 2015 Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable buildfile
  main-is:             buildfile.hs
  other-extensions:    OverloadedStrings
  build-depends:       base, shake, text
  default-language:    Haskell2010
